--- a/project.config.json
+++ b/project.config.json
@@ -27,7 +27,7 @@
 			"outputPath": ""
 		},
 		"useIsolateContext": true,
-		"useCompilerModule": true,
+		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
@@ -66,7 +66,10 @@
 			"current": -1,
 			"list": [
 				{
-
+					"id": 0,
+					"name": "pages/createhost/createhost",
+					"pathName": "pages/createhost/createhost",
+					"query": "",
 					"scene": null
 				}
 			]
