--- a/project.config.json
+++ b/project.config.json
@@ -66,15 +66,17 @@
 			"current": -1,
 			"list": [
 				{
-
-					"id": 0,
-					"name": "pages/createhost/createhost",
-					"pathName": "pages/createhost/createhost",
-					"query": "",
-
 					"id": -1,
 					"name": "pages/show/show",
 					"pathName": "pages/show/show",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/show/show",
+					"pathName": "pages/createhost/createhost",
+					"query": "",
 					"scene": null
 				}
 			]
