--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "pages":[
     "pages/index/index",
     "pages/show/show",
-    "pages/createhost/createhost"
+    "pages/createhost/createhost",
+    "pages/book/book"
   ],
   "window":{
     "backgroundTextStyle":"light",
@@ -10,6 +11,34 @@
     "navigationBarTitleText": "Relatives With Benefits",
     "navigationBarTextStyle":"white"
   },
+
+  
+
+  "tabBar":
+   {
+      "list": [
+        {
+    "pagePath": "pages/index/index",
+    "text": "hosts",
+    "iconPath": "",
+    "selectedIconPath": ""
+        },
+        {
+          "pagePath": "pages/book/book",
+          "text": "bookings",
+          "iconPath": "",
+          "selectedIconPath": ""
+              },
+
+        {
+      "pagePath": "pages/createhost/createhost",
+      "text": "my host",
+      "iconPath": "",
+      "selectedIconPath": ""
+      }
+      ]
+      },
+
   "style": "v2",
   "sitemapLocation": "sitemap.json"
 }
