done with adding map on show and index pages

--- a/app.json
+++ b/app.json
@@ -11,5 +11,10 @@
     "navigationBarTextStyle":"black"
   },
   "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "permission": {
+    "scope.userLocation": {
+      "desc": "A message to tell the user why you need permission"
+    }
+  }
 }
