--- a/project.config.json
+++ b/project.config.json
@@ -27,7 +27,7 @@
 			"outputPath": ""
 		},
 		"useIsolateContext": true,
-		"useCompilerModule": true,
+		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
@@ -83,6 +83,13 @@
 					"id": -1,
 					"name": "pages/createhost/createhost",
 					"pathName": "pages/createhost/createhost",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "create booking",
+					"pathName": "pages/createbooking/createbooking",
 					"scene": null
 				}
 			]
