--- a/app.json
+++ b/app.json
@@ -8,9 +8,9 @@
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#FFA555",
+    "navigationBarBackgroundColor": "#FFFBFF",
     "navigationBarTitleText": "Relatives With Benefits",
-    "navigationBarTextStyle":"white"
+    "navigationBarTextStyle":"black"
   },
 
   
